--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^24.24.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.19.0",
-    "puppeteer": "^20.9.0"
+    "whatsapp-web.js": "^1.23.0"
   }
 }
